--- a/pages/nutritional-information/Nutritionals.scss
+++ b/pages/nutritional-information/Nutritionals.scss
@@ -110,8 +110,8 @@
       &.sticky {
         position: fixed;
         top:134px;
-        z-index: 99;
-          max-width: 145rem;
+        z-index: 90;
+        max-width: 145rem;
         transition: all 0.5s ease;
          
 
